--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de comparti información y tus ideas. Mucho
+                    mas que sali en youtube.
+                </p>
             </div>
         </div>
         
