--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,9 @@
                 </p>
                 <p>suscribete y dale like</p>
             </div>
+            <div id="footer">
+                hecho por platzi
+            </div>
         </div>
     </body>
 </html>
